Update show swipe, so the first and last event, it redirects to index page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -127,10 +127,15 @@ $('#whole_thang').on('swipeleft', function(){
 	// var url = 'http://localhost:3000/events/'
 	console.log(url)
 	var current_id = <%= params[:id] %>
-	console.log(current_id)
-	var new_id = String(current_id + 1)
-	console.log(new_id)
-	window.location.replace(url + new_id)
+	first = <%= Event.first.id %>
+	last = <%= Event.last.id %>
+	if(current_id == last) {
+		window.location.replace(url)
+	}
+	else {
+		var new_id = String(current_id + 1)
+		window.location.replace(url + new_id)
+	}
 })
 </script>
 
@@ -142,22 +147,28 @@ $('#whole_thang').on('swiperight', function(){
 	console.log(url)
 	var current_id = <%= params[:id] %>
 	console.log(current_id)
-	var new_id = String(current_id - 1)
-	console.log(new_id)
-	window.location.replace(url + new_id)
+	first = <%= Event.first.id %>
+	last = <%= Event.last.id %>
+	if(current_id == first) {
+		window.location.replace(url)
+	}
+	else {
+		var new_id = String(current_id - 1)
+		window.location.replace(url + new_id)
+	}
 })
 </script>
 
 <!-- Tap Hold - favorite events -->
 <script>
-$('#whole_thang').on('taphold', function(){
-	var current_id = '<%= params[:id] %>'
-	var current_name = '<%= @event.name %>'
-	console.log(current_name)
-	console.log(current_id)
-	checkCookie(current_id.to_i);
-	console.log("Cookie: " + current_id + " Saved");
-	alert("Cookie: " + current_name + " Saved");
-})
+// $('#whole_thang').on('taphold', function(){
+// 	var current_id = '<%= params[:id] %>'
+// 	var current_name = '<%= @event.name %>'
+// 	console.log(current_name)
+// 	console.log(current_id)
+// 	checkCookie(current_id.to_i);
+// 	console.log("Cookie: " + current_id + " Saved");
+// 	alert("Cookie: " + current_name + " Saved");
+// })
 </script>
 
