--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,6 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+@mixin linearGradient($top, $bottom){
+    background: $top; /* Old browsers */
+    background: -moz-linear-gradient(top,  $top 0%, $bottom 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,$top), color-stop(100%,$bottom)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  $top 0%,$bottom 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  $top 0%,$bottom 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  $top 0%,$bottom 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  $top 0%,$bottom 100%); /* W3C */
+}
+
   html, body {
     font-family: 'Lato', sans-serif !important;
     font-weight: 100;
@@ -11,6 +21,7 @@
     height: 100vh;
     width: 100vw;
     position: relative;
+    background: url(http://www.johnmaclean.com/data/photos/222_1_mg_6129_livebooks.jpg) 20% 0px no-repeat fixed;
   }
 
   .overlay{
@@ -20,7 +31,8 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  background-color: rgba(0,0,0,0.7); /*dim the background*/
+  // background-color: rgba(0,0,0,0.4); //dim the background
+    @include linearGradient(rgba(0,0,0,.1), rgba(0,0,0,1));
   }
 
   h1, h2 {
@@ -38,48 +50,42 @@
     display: block;
   }
 
+  .welcomeLogo {
+    margin: 0 auto;
+    background-image: url('Logo_final.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 80%;
+    height: auto;
+    min-height: 200px;
+    position: absolute;
+    bottom: 20%;
+    left: 0;
+    right: 0;
+  }
+
   .ui-page-theme-a {
     text-shadow: 0 0 0 black !important;
   }
 
-  .welcomeCopy {
-    margin: 0 auto;
-    margin-bottom: 20px;
-    width: 300px;
-    color: rgb(200,200,200);
-    text-align: center;
-    font-size: 20pt;
-    line-height: 30px;
-    -webkit-text-shadow: 3px 3px 2.5px rgba(50, 50, 50, 1);
-    -moz-text-shadow:    3px 3px 2.5px rgba(50, 50, 50, 1);
-    text-shadow:         3px 3px 2.5px rgba(50, 50, 50, 1);
-    font-weight: 500;
-  }
-
-  .welcomeCopy>span {
-    color: rgb(255,255,255);
-    font-size: 21pt
-  }
-
-  #smallWelcomeCopy {
-    font-size: 75%;
-    color: rgb(248, 146, 49);
-  }
-
   .ctaSignUp {
     font-family: 'Lato', sans-serif !important;
-    position: relative;
+    position: absolute;
+    bottom: 10%;
+    left: 0;
+    right: 0;
     margin: 0 auto;
     text-align: center;
-    font-size: 1.2em !important;
+    font-size: 1.5em !important;
     background-color: rgb(252, 184, 121);
     border-radius: 10px;
     border-bottom: 8px solid rgb(248, 146, 49);
     padding: 10px;
     font-weight: 300 !important;
     color: black !important;
-    display: table;
-    width: 200px;
+    width: 80%;
+    max-width: 450px;
   }
 
   a.ctaSignUp:hover {
