about to push to heroku again. changes didnt reflect on production.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -57,6 +57,7 @@
     background-size: contain;
     background-position: center;
     width: 80%;
+    min-width: 200px;
     height: auto;
     min-height: 200px;
     position: absolute;
