--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -20,7 +20,7 @@
           <span class="glyphicon glyphicon glyphicon-align-justify"></span>
         </a>
         <div class="navbar-collapse collapse">
-          <ul class="nav pull-right navbar-nav">
+          <ul class="nav pull-left navbar-nav">
             <li><%= link_to(events_path) do %>
               <span class='glyphicon glyphicon-calendar'></span>
             <% end %></li>
