--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -26,7 +26,7 @@ $maincolor: lighten(#ccc, 40%);
 }
 
 .navbar-inverse .navbar-nav > li > a {
-	text-align: right;
+	text-align: left;
 }
 
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
@@ -55,7 +55,7 @@ $maincolor: lighten(#ccc, 40%);
 }
 
 .navbar-collapse.collapse.in {
-	background-color: #f9f9f9 !important;
+	// background-color: #f9f9f9 !important;
 }
 
 .header_row {
