testing to see if changes reflect on heroku

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,6 +6,6 @@
   </div>         
 
 	<!-- Sign Up Button -->
-	<%= link_to 'Discover Personalized Events', new_user_registration_path, class: 'ctaSignUp' %>
+	<%= link_to 'testing', new_user_registration_path, class: 'ctaSignUp' %>
 </div>
 </div> 
