--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -119,7 +119,7 @@ img {
 		</div>
 
 		<div class="row">
-			<div class="col-md-12">
+			<div class="col-md-12 event_details">
 				<p class="text-center">
 				<%= @event.event_date.strftime('%a, %b %d @ %l:%M %p') %></p>
 				<p class="text-center">Hosted by <%= @event.group %></p>
