Fix modal in show page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -92,7 +92,7 @@ img {
 					<div class="col-xs-4 text-right">
 						<p>
 							<button data-toggle="modal" data-target=".rsvp-modal-lg"><i class="fa fa-users"></i>
-							<i class="rsvp_badge"> <%= @event.rsvp %> </i>Modal</button>
+							<i class="rsvp_badge"> <%= @event.rsvp %> </i></button>
 						</p>
 						<div class="modal fade rsvp-modal-lg" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
 						  <div class="modal-dialog modal-lg">
