--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,6 +6,82 @@
 /*-----------------------------------------
 Sign Up/Sign In
 -----------------------------------------*/
+.interest-container {
+  margin-top: 90px;
+  // border: 1px solid black;
+  overflow: auto;
+  padding: 10px;
+  .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6 {
+    // border: 1px solid black;
+
+    input[type=checkbox] {
+      display: none;
+    }
+    .interest-btn {
+      position: relative;
+
+      label {
+        cursor: pointer;
+        border-radius: 5px;
+        border: 1px solid gray;
+        padding: 10px;
+        margin: 10px;
+        width: 90%;
+        height: 150px;
+
+        &:after {
+          content: '';
+        }
+
+        .labelcontain {
+          width: 100%;
+          height: 100%;
+
+          .title {
+            border-bottom: 1px solid black;
+            background-color: rgba(200, 200, 200, .7);
+            border-radius: 5px;
+            width: 90%;
+            height: 40px;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px;
+          }
+
+          .description {
+            position: absolute;
+            top: 55px;
+          }
+        }
+
+        
+      }
+
+      input[type=checkbox]:checked + label {
+        background-image: url('check.svg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        span {
+          display: inline-block;
+          vertical-align: bottom;
+          margin-right: 5px;
+        }
+        &:after {
+          content: '';
+        }
+      }
+    }
+  }
+  .row {
+    // border: 1px solid black;
+  }
+}
+
+
+
+
 .signUpScreen {
   text-align: center;
 }
@@ -17,7 +93,7 @@ Sign Up/Sign In
 }
 
 .signUpScreen .col-xs-6, .signUpScreen .signUpScreen .col-sm-6, .signUpScreen .col-md-6, .signUpScreen .col-lg-6 {
-  padding: 0px; 
+  // padding: 0px; 
 }
 
 .authHeader {
@@ -53,20 +129,6 @@ h5 {
   margin-left: 5px;
   margin-right: 5px;
   font-size: 1px !important; 
-}
-
-.ui-mobile label, div.ui-controlgroup-label {
-  font-size: 14px !important;
-}
-
-.ui-input-text.ui-body-inherit.ui-corner-all.ui-shadow-inset {
-  width: 80%;
-  margin: 0 auto;
-}
-
-.ui-btn.ui-input-btn.ui-corner-all.ui-shadow {
-  width: 80%;
-  margin: 0 auto;
 }
 
 
