--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
           <div class="interest-btn">
           <input type="checkbox" id="follow1">
             <label for="follow1">
-              <div class="labelcontain">
+              <div class="labelcontain" id="professional">
                 <span class="title">Professional</span>
                 <span class="description">Conventions, Trade Shows & Conferences</span>
               </div>
