--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />  
 
 
-  <%= javascript_include_tag "//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"%>
+  <%#= javascript_include_tag "//code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"%>
 
 
 <script>
