change opacity on professional icon

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -28,6 +28,7 @@ Sign Up/Sign In
         margin: 10px;
         width: 90%;
         height: 150px;
+        background-color: rgba(200, 200, 100, .4);
 
         #professional {
           background-image: url('professional.svg');
