--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,8 +14,8 @@
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
 
           <div class="interest-btn">
-          <input type="checkbox" id="follow1">
-            <label for="follow1">
+          <input type="checkbox" id="checkbox1">
+            <label for="checkbox1">
               <div class="labelcontain" id="professional">
                 <span class="title">Professional</span>
                 <span class="description">Conventions, Trade Shows & Conferences</span>
@@ -24,8 +24,13 @@
           </div>
 
           <div class="interest-btn">
-            <%= check_box_tag "Classes, Trainings & Workshops", :categories %> 
-            <%= label_tag "Classes, Trainings & Workshops"%>
+          <input type="checkbox" id="checkbox2">
+            <label for="checkbox2">
+              <div class="labelcontain" id="jobs">
+                <span class="title">Jobs</span>
+                <span class="description">Job fairs & meet & greets</span>
+              </div>
+            </label>
           </div>
         
           <div class="interest-btn">
