add jobs icon and change selected background for event categories

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -59,12 +59,13 @@ Sign Up/Sign In
             top: 10px;
             left: 10px;
             padding: 10px;
-            font-size: 1.5em;
+            font-size: 100%;
           }
 
           .description {
             position: absolute;
             top: 55px;
+            font-size: 90%;
           }
         }
 
